# cut-silence

./: PRD.md  README.md  main.py  pyproject.toml
src/cut_silence/: __init__.py  analyzer.py  cli.py  concatenator.py  config.py  ffmpeg_runner.py  processor.py  progress.py
