[project]
name = "cut-silence"
version = "0.1.0"
description = "CLI tool to automatically remove silence from MP4 videos"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "ffmpeg-python>=0.2.0",
    "tqdm>=4.65.0",
]
license = { text = "MIT" }
keywords = ["video", "silence", "removal", "ffmpeg", "cli", "video-editing"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Video",
]

[project.scripts]
cut-silence = "cut_silence.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cut_silence"]
